Doc + improvements (see commit message details)
Improvements in this commit:
 * Created bug/ & issue/ directories to provide some structure. Included a
    README file in doc/ directory.
 * Object IDs now use long/Long instead of int/Int. Injected field is private.
 * Added command line argument handling to agent for controlling stdout
    verbosity and use of the agent's network server. Cmd args are:
        [--verbose | -v]    - controls stdout verbosity
        [--server | -s]     - start a network server for event streaming.
 * Abstract classes are not instrumented. (also holds for interfaces)